<resources>
    <!-- Login -->
    <string name="app_name">Buffet</string>
    <string name="encabezado">Registro de Usuario</string>
    <string name="saludo">Bienvenido a la primer aplicación</string>
    <string name="email">Mail</string>
    <string name="clave">Clave</string>
    <string name="EmailHint">Email</string>
    <string name="ClaveHint">Clave</string>
    <string name="loginimage">LoginImage</string>
    <string name="buffetutn">Buffet-UTN</string>
    <string name="chkrememberme">Recordarme</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarme">Registrarme</string>
    <string name="o">o</string>

    <!-- Registro -->
    <string name="registroTitulo">Registro</string>
    <string name="registroSubtitulo">"Esta es la pantalla de registro.\nPor favor ingrese datos verdaderos."</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="confirmacionClave">Reingrese</string>
    <string name="nombreHint">Nombre</string>
    <string name="apellidoHint">Apellido</string>
    <string name="dniHint">DNI</string>
    <string name="confirmacionClaveHint">Reingrese la clave</string>
    <string name="btnRegistrarme">Registrarme</string>

    <!-- Menu / Pedido -->
    <string name="txtMenuTitulo">Menú</string>
    <string name="btnCafeBebidas"><![CDATA[Café/Bebidas]]></string>
    <string name="btnMenu">Menú</string>
    <string name="btnSnacks">Snacks</string>
    <string name="btnAgregarProducto">+</string>
    <string name="btnQuitarProducto">-</string>
    <string name="txtLogout">Cerrar sesión</string>
    <string name="txtPidiendo">Pidiendo&#8230;</string>
    <string name="txtVerPedido">Ver pedido</string>
    <string name="txtImporteEstimado">Importe estimado:</string>
    <string name="txtElementosSeleccionados">Elementos seleccionados:</string>
    <string name="txtPedidoTitulo">Pedido</string>
    <string name="txtMiPedido">Mi pedido</string>
    <string name="txtEnviarPedido">Enviar pedido</string>

    <!-- Mensajes -->
    <string name="btnOK">Aceptar</string>

    <string name="msgSignupSuccessful">Usuario registrado con éxito.</string>
    <string name="msgNoName">El campo Nombre es obligatorio.</string>
    <string name="msgNoSurname">El campo Apellido es obligatorio.</string>
    <string name="msgNoID">El campo DNI es obligatorio.</string>
    <string name="msgPasswordsMissmatch">La contraseña y su validación no coinciden.</string>
    <string name="msgIDAlreadyExists">El DNI ingresado ya se encuentra registrado.</string>
    <string name="msgMailAlreadyExists">El mail ingresado ya se encuentra registrado.</string>

    <string name="msgEmptyProductsListTitle">Lista vacía</string>
    <string name="msgEmptyProductsList">No ha seleccionado ningún producto para mostrar.</string>
    <string name="msgAllProductsRemoved">Lista de pedidos vacía</string>
    <string name="msgOrderSent">¡Pedido enviado!</string>

    <string name="msgSignupSuccessfulTitle">¡Registro correcto!</string>
    <string name="msgIncorrectDataTitle">Información incorrecta</string>
    <string name="msgIncorrectMailFormat">El email ingresado no tiene un formato correcto.</string>
    <string name="msgIncorrectPasswordFormat">La contraseña ingresada no tiene un formato correcto.</string>
    <string name="msgNoPassword">Debe ingresar una contraseña para acceder.</string>
    <string name="msgEmailNotFound">El email ingresado no corresponde a un usuario activo.</string>
    <string name="msgIncorrectPassword">Contraseña incorrecta.</string>
    <string name="msgErrorTitle">Error</string>
    <string name="msgErrorData">Hubo un error al procesar los datos.</string>

</resources>
