<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop= "@dimen/activity_vertical_margin"
    tools:context="com.trabajopracticolabov.hernanmielniczuk.buffet.Login.Activity.LoginActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:background="@android:color/holo_green_light">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/encabezado"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/saludo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/buffetutn" />

    <ImageView
        android:contentDescription="@string/loginimage"
        android:layout_width="75dp"
        android:layout_height="75dp"

        android:src="@drawable/noimage"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="5dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:inputType="textEmailAddress"
            android:hint="@string/EmailHint"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="5dp"
            android:text="@string/clave" />

        <EditText
            android:id="@+id/txtClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:inputType="textPassword"
            android:hint="@string/ClaveHint"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/ingresar"/>

    <CheckBox
        android:id="@+id/chkRecordarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/chkrememberme"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/o"
        android:layout_gravity="center"/>

    <Button
        android:id="@+id/btnRegistrarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/registrarme"/>
</LinearLayout>