<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registro_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trabajopracticolabov.hernanmielniczuk.buffet.Registro.Activity.RegistroActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/registroTitulo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registroSubtitulo" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="true">

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="5dp"
            android:text="@string/nombre" />

        <EditText
            android:id="@+id/txtRegistroNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/nombreHint"/>

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="5dp"
            android:text="@string/apellido" />

        <EditText
            android:id="@+id/txtRegistroApellido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/apellidoHint" />

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="5dp"
            android:text="@string/dni" />

        <EditText
            android:id="@+id/txtRegistroDNI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/dniHint"/>
    </GridLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:useDefaultMargins="true">

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="5dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/txtRegistroEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="5dp"
            android:text="@string/clave" />

        <EditText
            android:id="@+id/txtRegistroClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/ClaveHint"/>

        <TextView
            android:layout_column="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:gravity="center|start"
            android:paddingStart="5dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:paddingLeft="5dp"
            android:text="@string/confirmacionClave" />

        <EditText
            android:id="@+id/txtRegistroReingresoClave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmacionClaveHint"/>
    </GridLayout>

    <Button
        android:id="@+id/btnRegistroRegistrarme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btnRegistrarme"/>
</LinearLayout>
