<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.trabajopracticolabov.hernanmielniczuk.buffet.Pedido.Activity.PedidoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:background="@color/colorPrimaryDark">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/txtPedidoTitulo"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtLogout" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtMiPedido"
            android:textSize="20sp"
            android:layout_weight="0.3"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtImporteEstimado"
            android:layout_weight="0.1"/>
        <TextView
            android:id="@+id/txtImportePedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end">
        <Button
            android:id="@+id/btnEnviarPedido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtEnviarPedido"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvProductosPedido"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
